--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@
 @import url(font.css);
 
 #box-main {
+    background-image: url(/assets/background.jpg);
     height: 100%;
     display: flex;
     flex-direction: column;
@@ -12,21 +13,112 @@
 }
 
 main {
-    padding: 24px;
-    background-color: aqua;
-    width: 30vw;
+    background-color: #efefef;
+    padding: var(--padding-box);
+    width: 550px;
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 32px;
+    border-radius: var(--box-border-radius);
+    box-shadow: -4px 8px 12px #0000006c;
+    position: relative;
 }
 
 form {
     display: grid;
     gap: 12px;
+    width: 80%;
 }
 
 input[type="text"] {
     padding: 8px;
-    border: 1px solid black;
+    border: 1px solid var(--light-button);
+    border-radius: var(--box-border-radius);
+}
+
+input[type="text"]:focus {
+    box-shadow: 0 0 5px var(--light-button);
+}
+
+#box-functions {
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+    width: 80%;
+}
+
+#box-link {
+    height: 150px;
+    background-color: #ffffff;
+    padding: var(--padding-box);
+    border-radius: var(--box-border-radius);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+
+#box-link span {
+    position: absolute;
+    bottom: 0;
+    color: #a4a4a4;
+}
+
+#box-buttons {
+    display: flex;
+    width: 100%;
+    gap: 4px;
+}
+
+#box-buttons button {
+    flex-grow: 1;
+}
+
+#box-social-medias {
+    height: 62px;
+    display: flex;
+    justify-content: center;
+    gap: 32px;
+}
+
+img {
+    display:inline;
+    vertical-align: middle;
+    margin-right: 4px;
+}
+
+#box-msg {
+    padding: var(--padding-box);
+    border-radius: var(--box-border-radius);
+    background-color: #d0ffd0;
+    border: 1px solid #00ff00;
+    height: 72px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+}
+
+#box-send-link {
+    display: flex;
+    gap: 12px;
+    width: 100%;
+    justify-content: center;
+}
+
+footer {
+    margin-top: 28px;
+}
+
+@media screen and (max-width: 600px){
+    #box-buttons {
+        width: 100%;
+        flex-direction: column;
+        align-items: center;
+    }
+    #box-buttons button {
+        width: 200px;
+    }
 }
