--- a/css/button.css
+++ b/css/button.css
@@ -10,6 +10,10 @@ button:active {
     opacity: 70%;
 }
 
+button{
+    background: none;
+}
+
 .big-button {
     height: 42px;
     box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.2), 0px 2px 2px rgba(0, 0, 0, 0.14), 0px 1px 5px rgba(0, 0, 0, 0.12);
@@ -28,14 +32,12 @@ button:active {
 }
 
 #close-box-msg {
-    background: none;
     position: absolute;
     right: 0;
 }
 
 #btn-settings {
     margin: 12px;
-    background: none;
     position: absolute;
     top: 0;
     right: 0;
