--- a/css/style.css
+++ b/css/style.css
@@ -2,20 +2,23 @@
 @import url(button.css);
 @import url(var.css);
 @import url(font.css);
+@import url(modal.css);
 
 #main-box {
     background-image: url(/assets/background.jpg);
-    height: 100%;
+    height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    background-attachment: fixed;
 }
 
 main {
     background-color: #efefef;
     padding: var(--padding-box);
     width: 1120px;
+    max-height: 80vh;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -23,6 +26,8 @@ main {
     border-radius: var(--box-border-radius);
     box-shadow: -4px 8px 12px #0000006c;
     position: relative;
+    overflow: auto;
+    box-sizing: border-box;
 }
 
 #box-initial {
@@ -89,14 +94,29 @@ input[type="text"]:focus {
 
 #box-msg {
     padding: var(--padding-box);
+    z-index: 100;
+    width: 40vw;
+    height: 100px;
     border-radius: var(--box-border-radius);
+    position: fixed;
+    top: 50px;
+    left: 50%;
+    transform: translateX(-50%);
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    display: none;
+}
+
+.success-msg {
     background-color: #d0ffd0;
     border: 1px solid #00ff00;
-    height: 72px;
-    display: none;
-    align-items: center;
-    justify-content: center;
-    position: relative;
+}
+
+.error-msg {
+    background-color: #ffd0d0;
+    border: 1px solid #ff0000;
 }
 
 #box-send-link {
@@ -121,6 +141,7 @@ table {
     border-collapse: collapse;
     table-layout: fixed;
     width: 80%;
+    word-wrap: break-word;
 }
 
 thead {
@@ -134,7 +155,7 @@ tr {
     border-bottom: 2px #E0E0E0 solid;
 }
 
-td{
+td {
     font-size: small;
 }
 
@@ -152,7 +173,17 @@ footer {
     margin-top: 28px;
 }
 
+@media screen and (max-width: 1200px) {
+    main {
+        width: 90vw;
+    }
+}
+
 @media screen and (max-width: 600px) {
+    main {
+        width: 90vw;
+    }
+
     #box-buttons {
         width: 100%;
         flex-direction: column;
