--- a/css/style.css
+++ b/css/style.css
@@ -55,6 +55,7 @@ input[type="text"]:focus {
     flex-direction: column;
     gap: 12px;
     width: 80%;
+    align-items: center;
 }
 
 #box-link {
@@ -99,7 +100,7 @@ input[type="text"]:focus {
     height: 100px;
     border-radius: var(--box-border-radius);
     position: fixed;
-    top: 50px;
+    top: 20px;
     left: 50%;
     transform: translateX(-50%);
     flex-direction: column;
